# decode-authorization-message

./: .gitignore  LICENSE.txt  README.md  requirements.txt  setup.cfg  setup.py
src/decode/: cli.py
