[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt
name = decode-authorization-message
version = 0.1.0
description = Decode AWS Error message
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tsenay/decode-authorization-message
author = Thomas Senay
author_email = thomas.senay@me.com
classifiers =
    Development Status :: 5 - Production/Stable'
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Operating System :: OS Independent
    Topic :: Software Development
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
keywords =
    aws
    setuptools
    development
project_urls =
    Bug Reports = https://github.com/tsenay/decode-authorization-message/issues
    Source  = https://github.com/tsenay/decode-authorization-message.git

[options]
python_requires = >=3.9, <4
packages = find:
package_dir=
    =src
install_requires =
    boto3 ==1.24.78
    clint ~=0.5.1
    setuptools ~=65.3.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    decode-authorization-message = decode.cli:main

